Increase vertical spacing on vocab page (fixes #57)

--- a/css/rights-site.css
+++ b/css/rights-site.css
@@ -398,7 +398,7 @@ small,
 
 .statement-box {
   padding: 30px;
-  margin-bottom: 2px;
+  margin-bottom: 10px;
   background: white;
 }
 
